--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </form>
         </section>
     </main>
-    <!-- <script src="./main.js"></script> -->
+    <script src="./main.js"></script>
 </body>
 
 </html>
